--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@popperjs/core": "2.9.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "sass": "^1.43.5"
+    "sass": "^1.43.5",
+    "vue-cool-lightbox": "^2.7.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
