--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "eslint-plugin-vue": "^7.12.1",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
-    "sass-loader": "^12.3.0"
+    "sass-loader": "^12.3.0",
+    "simpleddp": "^2.2.4",
+    "simpleddp-plugin-login": "^4.0.2",
+    "vue-simpleddp": "^0.0.6-3"
   }
 }
